# aibook

./: .gitignore  docusaurus.config.ts  package-lock.json  package.json  processing_state.json  sidebars.ts  vercel.json  verification.md
.agent/workflows/: sp.chatbot.md  sp.constitution.md  sp.implement.md  sp.plan.md  sp.specify.md  sp.tasks.md
.github/workflows/: deploy.yml
backend/: README.md  integration_test.py  processing_state.json  pyproject.toml  test_basic.py  test_main_sitemap.py  test_sitemap.py  urls.txt
backend/src/: chunker.py  config.py  crawler.py  embedder.py  main.py  models.py  pipeline.py  state_manager.py  utils.py  validation.py  vector_db.py
blog/: 2024-12-01-welcome-physical-ai.md  2024-12-05-getting-started-ros2.md  2024-12-10-digital-twins-robotics.md  2024-12-15-nvidia-isaac-robotics.md  2024-12-20-vla-future-robotics.md  authors.yml  tags.yml
docs/: intro.md
docs/01-robotic-nervous-system/: humanoid-urdf.md  index.md  python-bridging.md  ros2-fundamentals.md
docs/02-digital-twin/: index.md  physics-engines.md  sensor-simulation.md  unity-rendering.md
docs/03-ai-robot-brain/: index.md  isaac-sim.md  nav2-navigation.md  visual-slam.md
docs/04-vision-language-action/: capstone.md  cognitive-logic.md  index.md  voice-pipeline.md
docs/part-1-foundations/: ai-agent-architecture.md  humanoid-robotics-fundamentals.md  introduction-to-physical-ai.md
rag-chatbot/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  ingest_spec.py  requirements.txt  test_import.py  test_openai_key.py
static/: manifest.json
(+65 files in other folders)
